<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- homescreen strings -->

    <string name="app_name">TransNav</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="account_log_in_string">Account Log In</string>
    <string name="username_string">Username</string>
    <string name="forgot_password__string">Forgot Password?</string>
    <string name="_don_t_have_an_account__register_now_string">Dont have an account? Register Now</string>
    <string name="password_string">Password</string>
    <string name="log_in_string">Log In</string>
    <string name="account_registration_string">Account Registration</string>
    <string name="create_account_string">Create Account</string>
    <string name="email_string">Email</string>
    <string name="confirm_password_string">Confirm Password</string>
    <string name="i_agree_to_the_terms_of_service_and_privacy_policy_string">I agree to the Terms of Service and Privacy Policy </string>
    <string name="search_destination_string">Search Destination</string>
    <string name="hi__anonymous__string">Hi, ANONYMOUS!</string>
    <string name="where_would_you_like_to_go__string">Where would you like to go?</string>
    <string name="bus_string">BUS</string>
    <string name="train_string">TRAIN</string>
    <string name="schedule_string">Schedule</string>
    <string name="message_string">Message</string>
    <string name="forum_string">Forum</string>
    <string name="route_string">Route</string>
    <string name="bonus_string">Bonus</string>
    <string name="history_string">History</string>
    <string name="private_chat_string">Private Chat</string>
    <string name="group_gabut__5__string">Group Gabut (5)</string>
    <string name="private_string">David Pedo</string>
    <string name="halo_ges_string">Halo ges</string>
    <string name="group_chat_string">Group Chat</string>
    <string name="_25_april_2023_string">25 April 2023</string>
    <string name="create_new_group_string">Create New Group</string>
    <string name="_7_more_trips_untill__your_next_gift___string">7 More trips untill your next gift !</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="featured_string">Featured</string>
    <string name="recent_string">Recent</string>
    <string name="popular_string">Popular</string>
    <string name="cara_pergi_dari_binus_anggrek_ke_bogor_string">Cara pergi dari BINUS Anggrek ke Bogor</string>
    <string name="_6_replies_string">6 Replies</string>
    <string name="ardiansyah_string">Ardiansyah</string>
    <string name="_2_may_2023_string">2 May 2023</string>
    <string name="transportasi_umum_di_sekitar_bsd_string">Transportasi umum di sekitar BSD</string>
    <string name="_4_replies_string">4 Replies</string>
    <string name="rudy_string">Rudy</string>
    <string name="_30_april_2023_string">30 April 2023</string>
    <string name="create_new_thread_string">Create New Thread</string>
    <string name="today_string">Today</string>
    <string name="_09_05_string">09:05</string>
    <string name="rp_3_000_string">Rp 3.000</string>
    <string name="home_string">Home</string>
    <string name="binus_anggrek_string">BINUS Anggrek</string>
    <string name="details_string">Details</string>
    <string name="details_ek1_string">Details</string>
    <string name="what_schedule_you_would_like_to_see__string">What Schedule you would like to see?</string>
    <string name="bus_125_string">BUS 125</string>
    <string name="jakarta___banten_string">Jakarta - Banten</string>
    <string name="map_string">Map</string>
    <string name="_15_00_string">15.00</string>
    <string name="_16_00_string">16.00</string>
    <string name="halte_harmoni_string">Halte Harmoni</string>
    <string name="halte_ciledug_string">Halte Ciledug</string>
    <string name="bus_pick_up_location__nearest__string">Bus pick up location (nearest)</string>
    <string name="bus_drop_off_location__nearest__string">Bus drop off location (nearest)</string>
    <string name="palmerah___cisauk_string">Palmerah - Cisauk</string>
    <string name="_07_05_2023_string">07/05/2023</string>
    <string name="___string">-</string>
    <string name="palmerah_string">PALMERAH</string>
    <string name="cisauk_string">CISAUK</string>
    <string name="train_schedule_string">Train Schedule</string>
    <string name="search_string">Search</string>
    <string name="_15_00_ek1_string">15.00</string>
    <string name="_16_00_ek1_string">16.00</string>
    <string name="palmerah_station_string">Palmerah Station </string>
    <string name="cisauk_station_string">Cisauk Station</string>
    <string name="_15_15_string">15.15</string>
    <string name="_16_15_string">16.15</string>
    <string name="palmerah_station_ek1_string">Palmerah Station </string>
    <string name="cisauk_station_ek1_string">Cisauk Station</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>