<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		homescreen
	 *	@date 		Wednesday 24th of May 2023 03:47:37 AM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/homescreen" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >

			<View   android:id="@+id/_bg__homescreen"
				android:background="@drawable/_bg__homescreen_shape"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="360dp"
				android:layout_height="800dp" />


			<RelativeLayout android:id="@+id/group_23"
				android:layout_marginTop="176dp"
				android:layout_marginStart="20dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/rectangle_14"
					android:background="@drawable/rectangle_14_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="320dp"
					android:layout_height="448dp" />

				<TextView android:id="@+id/account_log_in"
					android:fontFamily="Inter"
					android:textStyle="bold"
					android:textSize="20sp"
					android:textColor="@color/account_log_in_color"
					android:layout_marginLeft="86dp"
					android:layout_marginTop="50dp"
					android:layout_width="173dp"
					android:layout_height="38dp"
					android:text="@string/account_log_in_string"
					 />


				<RelativeLayout android:id="@+id/group_6"
					android:layout_marginTop="114dp"
					android:layout_marginStart="30dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/rectangle_1"
						android:background="@drawable/rectangle_1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="262dp"
						android:layout_height="38dp" />

					<TextView android:id="@+id/username"
						android:fontFamily="Inter"
						android:textSize="12sp"
						android:textColor="@color/username_color"
						android:layout_marginLeft="10dp"
						android:layout_marginTop="10dp"
						android:layout_width="77dp"
						android:layout_height="24dp"
						android:text="@string/username_string"
						 />

				</RelativeLayout>

				<TextView android:id="@+id/forgot_password_"
					android:fontFamily="Inter"
					android:textSize="12sp"
					android:textColor="@color/account_log_in_color"
					android:layout_marginLeft="186dp"
					android:layout_marginTop="216dp"
					android:layout_width="121dp"
					android:layout_height="23dp"
					android:text="@string/forgot_password__string"
					 />

				<TextView android:id="@+id/_don_t_have_an_account__register_now"
					android:fontFamily="Inter"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="12sp"
					android:textColor="@color/username_color"
					android:layout_marginLeft="51dp"
					android:layout_marginTop="332dp"
					android:layout_width="225dp"
					android:layout_height="24dp"
					android:text="@string/_don_t_have_an_account__register_now_string"
					 />


				<RelativeLayout android:id="@+id/group_22"
					android:layout_marginTop="170dp"
					android:layout_marginStart="30dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/rectangle_4"
						android:background="@drawable/rectangle_4_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="262dp"
						android:layout_height="38dp" />

					<TextView android:id="@+id/password"
						android:fontFamily="Inter"
						android:textSize="12sp"
						android:textColor="@color/username_color"
						android:layout_marginLeft="10dp"
						android:layout_marginTop="10dp"
						android:layout_width="73dp"
						android:layout_height="24dp"
						android:text="@string/password_string"
						 />


					<RelativeLayout android:id="@+id/mdi_hide"
						android:layout_marginTop="8dp"
						android:layout_marginStart="230dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<ImageView android:id="@+id/vector"
							android:src="@drawable/vector"
							android:contentDescription="vector"
							 android:layout_marginStart="0.83dp"
							android:layout_marginTop="2.5dp"
							android:layout_width="18.33dp"
							android:layout_height="15.83dp" />

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/group_24"
					android:layout_marginTop="256dp"
					android:layout_marginStart="30dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/rectangle_13"
						android:background="@drawable/rectangle_13_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="260dp"
						android:layout_height="36dp" />

					<TextView android:id="@+id/log_in"
						android:fontFamily="Inter"
						android:textStyle="bold"
						android:textSize="12sp"
						android:textColor="@color/rectangle_14_color"
						android:layout_marginLeft="112dp"
						android:layout_marginTop="11dp"
						android:layout_width="53dp"
						android:layout_height="23dp"
						android:text="@string/log_in_string"
						 />

				</RelativeLayout>

			</RelativeLayout>


			<RelativeLayout android:id="@+id/group_5"
				android:layout_marginTop="10dp"
				android:layout_marginStart="16dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>


				<RelativeLayout android:id="@+id/status_bar"
					android:layout_marginTop="11dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/battery_outline__35__opacity_"
						android:src="@drawable/battery_outline__35__opacity_"
						android:contentDescription="battery_outline__35__opacity_"
						 android:alpha="0.34999999403954"
						android:layout_marginStart="297dp"
						android:layout_marginTop="0dp"
						android:layout_width="31dp"
						android:layout_height="13dp" />

					<ImageView android:id="@+id/status_bar_ek1"
						android:src="@drawable/status_bar_ek1"
						android:contentDescription="status_bar_ek1"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="323dp"
						android:layout_height="13.89dp" />

				</RelativeLayout>

				<View   android:id="@+id/dynamic_island"
					android:background="@drawable/dynamic_island_shape"
					 android:layout_marginStart="99dp"
					android:layout_marginTop="0dp"
					android:layout_width="126dp"
					android:layout_height="37dp" />

				<View   android:id="@+id/home_indicator"
					android:background="@drawable/home_indicator_shape"
					 android:layout_marginStart="97dp"
					android:layout_marginTop="768dp"
					android:layout_width="134dp"
					android:layout_height="5dp" />

			</RelativeLayout>

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>